--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@dvsl/zoomcharts": "^1.18.4",
+    "@ng-select/ng-select": "^1.5.2",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "ngx-bar-rating": "^1.1.0",
