--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@ng-select/ng-select": "^1.5.2",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "html2canvas": "^1.0.0-alpha.12",
+    "jspdf": "^1.4.1",
     "ngx-bar-rating": "^1.1.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
