--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@dvsl/zoomcharts": "^1.18.4",
     "@ng-select/ng-select": "^1.5.2",
     "core-js": "^2.4.1",
+    "echarts": "^4.2.1",
     "hammerjs": "^2.0.8",
     "html2canvas": "^1.0.0-alpha.12",
     "jspdf": "^1.4.1",
