--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "html2canvas": "^1.0.0-alpha.12",
     "jspdf": "^1.4.1",
     "ngx-bar-rating": "^1.1.0",
+    "ngx-echarts": "^4.2.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
@@ -38,6 +39,7 @@
     "@angular/cli": "~1.7.4",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
+    "@types/echarts": "^4.1.9",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
